--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@ s.async = true;
 s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
 })({})
-</script>`
+</script>`,
   ];
 
   const adsGrid = document.getElementById("adsGrid");
@@ -1247,3 +1247,4 @@ l.parentNode.insertBefore(s, l);
     adsGrid.appendChild(slot);
   });
 </script>
+
